src/python-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-web-app-service
  labels:
    app: python-web-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: python-web-app
