src/python-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-web-app-ingress
  labels:
    app: python-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: python-web-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-web-app-service
                port:
                  number: 80
